--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native": "~0.55.2",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-geocoding": "^0.3.0",
+    "react-native-google-places": "^2.5.2",
     "react-native-image-picker": "^0.26.10",
     "react-navigation": "^2.7.0",
     "react-redux": "^5.0.7",
