--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "expo": "^27.1.1",
+    "expo-graphics": "^1.0.0-alpha.2",
     "expo-three": "^3.0.0-alpha.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -39,7 +40,9 @@
     "pg-native": "^3.0.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-arkit": "^0.9.0",
     "react-native-dropdown-menu": "^2.0.0",
+    "react-native-elements": "^0.19.1",
     "react-native-geocoding": "^0.3.0",
     "react-native-google-places": "^2.5.2",
     "react-native-image-picker": "^0.26.10",
