Profile Stuff and nav bottom bar

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "expo": "^27.1.1",
